Fixes crash deleting legend frame. r=rods sr=waterson b=70648